<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_background_light_blue"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/appNameLL"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coming"
                android:textColor="@color/white"
                style="@style/Base.TextAppearance.AppCompat.Display1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soon"
                android:textColor="@color/colorPrimary"
                style="@style/Base.TextAppearance.AppCompat.Display1"/>

    </LinearLayout>

    <TextView
            android:id="@+id/discoverTv"
            android:padding="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textColor="@color/white"
            style="@style/Base.TextAppearance.AppCompat.Large"/>


    <TextView
            android:id="@+id/moviesTv"
            android:padding="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/white"
            style="@style/Base.TextAppearance.AppCompat.Large"/>

    <TextView
            android:id="@+id/showsTv"
            android:padding="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows"
            android:textColor="@color/white"
            style="@style/Base.TextAppearance.AppCompat.Large"/>


    <TextView
            android:id="@+id/peopleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/white"
            style="@style/Base.TextAppearance.AppCompat.Large"/>


    <TextView
            android:id="@+id/comingTv"
            android:padding="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            style="@style/Base.TextAppearance.AppCompat.Large"/>

</LinearLayout>